@@ -1,45 +1,45 @@
 This page is used to control what smileys are supported by the wiki.
 Just write the text of a smiley to display it.
 
-* \:)	[[smileys/smile.png]]
-* \:-)	[[smileys/smile.png]]
-* \:D	[[smileys/biggrin.png]]
-* \:-D	[[smileys/biggrin.png]]
-* \B)	[[smileys/smile2.png]]
-* \B-)	[[smileys/smile2.png]]
-* \:))	[[smileys/smile3.png]]
-* \:-))	[[smileys/smile3.png]]
-* \;)	[[smileys/smile4.png]]
-* \;-)	[[smileys/smile4.png]]
-* \:\	[[smileys/ohwell.png]]
-* \:-\	[[smileys/ohwell.png]]
-* \:/	[[smileys/ohwell.png]]
-* \:-/	[[smileys/ohwell.png]]
-* \:|	[[smileys/neutral.png]]
-* \:-|	[[smileys/neutral.png]]
-* \>:>	[[smileys/devil.png]]
-* \X-(	[[smileys/angry.png]]
-* \<:(	[[smileys/frown.png]]
-* \:(	[[smileys/sad.png]]
-* \:-(	[[smileys/sad.png]]
-* \:-?	[[smileys/tongue.png]]
-* \:-P	[[smileys/tongue.png]]
-* \:o	[[smileys/redface.png]]
-* \|)	[[smileys/tired.png]]
-* \|-)	[[smileys/tired.png]]
-* \{OK}	[[smileys/thumbs-up.png]]
-* \{X}	[[smileys/icon-error.png]]
-* \{i}	[[smileys/icon-info.png]]
-* \(./)	[[smileys/checkmark.png]]
-* \(!)	[[smileys/idea.png]]
-* \[!]	[[smileys/attention.png]]
-* \/!\	[[smileys/alert.png]]
-* \(?)	[[smileys/question.png]]
-* \{*}	[[smileys/star_on.png]]
-* \{o}	[[smileys/star_off.png]]
-* \{1}  [[smileys/prio1.png]]
-* \{2}  [[smileys/prio2.png]]
-* \{3}  [[smileys/prio3.png]]
+* \\:)	[[smileys/smile.png]]
+* \\:-)	[[smileys/smile.png]]
+* \\:D	[[smileys/biggrin.png]]
+* \\:-D	[[smileys/biggrin.png]]
+* \\B)	[[smileys/smile2.png]]
+* \\B-)	[[smileys/smile2.png]]
+* \\:))	[[smileys/smile3.png]]
+* \\:-))	[[smileys/smile3.png]]
+* \\;)	[[smileys/smile4.png]]
+* \\;-)	[[smileys/smile4.png]]
+* \\:\	[[smileys/ohwell.png]]
+* \\:-\	[[smileys/ohwell.png]]
+* \\:/	[[smileys/ohwell.png]]
+* \\:-/	[[smileys/ohwell.png]]
+* \\:|	[[smileys/neutral.png]]
+* \\:-|	[[smileys/neutral.png]]
+* \\>:>	[[smileys/devil.png]]
+* \\X-(	[[smileys/angry.png]]
+* \\<:(	[[smileys/frown.png]]
+* \\:(	[[smileys/sad.png]]
+* \\:-(	[[smileys/sad.png]]
+* \\:-?	[[smileys/tongue.png]]
+* \\:-P	[[smileys/tongue.png]]
+* \\:o	[[smileys/redface.png]]
+* \\|)	[[smileys/tired.png]]
+* \\|-)	[[smileys/tired.png]]
+* \\{OK}	[[smileys/thumbs-up.png]]
+* \\{X}	[[smileys/icon-error.png]]
+* \\{i}	[[smileys/icon-info.png]]
+* \\(./)	[[smileys/checkmark.png]]
+* \\(!)	[[smileys/idea.png]]
+* \\[!]	[[smileys/attention.png]]
+* \\/!\	[[smileys/alert.png]]
+* \\(?)	[[smileys/question.png]]
+* \\{*}	[[smileys/star_on.png]]
+* \\{o}	[[smileys/star_off.png]]
+* \\{1}	[[smileys/prio1.png]]
+* \\{2}	[[smileys/prio2.png]]
+* \\{3}	[[smileys/prio3.png]]
 
 For example: {*} B) {*}
 
