@@ -8,6 +8,9 @@ ikiwiki (2.54) UNRELEASED; urgency=low
   * Change deb dependencies to list Text::Markdown before markdown, since
     the former, while slower, has a much better html parser that avoids
     numerous bugs.
+  * smileys: Some fixes for escaped smileys.
+  * smileys: Note that smileys need to be double-escaped for the escaping to
+    work. Markdown removes one level of escaping.
 
  -- Josh Triplett <josh@freedesktop.org>  Wed, 09 Jul 2008 21:30:33 -0700
 
